--- a/_posts/2015-09-25-redis2.8-configuration-file-interpretation.md
+++ b/_posts/2015-09-25-redis2.8-configuration-file-interpretation.md
@@ -12,15 +12,13 @@ utilities: fancybox,unveil,highlight
 
 当配置文件中涉及到内存大小的时候，需要注意下单位：
 
-
-{% highlight %}
 1k => 1000 bytes
 1kb => 1024bytes
 1m => 1000000 bytes
-1mb => 1024*1024 bytes
+1mb => 1024×1024 bytes
 1g => 1000000000 bytes
-1gb => 1024*1024*1024 bytes
-{% endhighlight %}
+1gb => 1024×1024×1024 bytes
+
 
 # 配置模板
 
