--- a/_posts/2015-09-25-redis2.8-configuration-file-interpretation.md
+++ b/_posts/2015-09-25-redis2.8-configuration-file-interpretation.md
@@ -13,10 +13,15 @@ utilities: fancybox,unveil,highlight
 当配置文件中涉及到内存大小的时候，需要注意下单位：
 
 1k => 1000 bytes
+
 1kb => 1024bytes
+
 1m => 1000000 bytes
+
 1mb => 1024×1024 bytes
+
 1g => 1000000000 bytes
+
 1gb => 1024×1024×1024 bytes
 
 
@@ -27,4 +32,47 @@ utilities: fancybox,unveil,highlight
 include /path/to/local.conf
 
 include /path/to/other.conf
+
+
+# 常用配置
+
+\# 设置yes可以让 REDIS 以一个守护进程来运行，默认为no.当REDIS作为一个守护进程来运行的时候 pidfile 参数作为pid文件。
+
+daemonize yes
+
+\# 当 REDIS 以守护进程运行的时候，该参数作为其pid文件。/var/run/redis.pid为默认值，同一台服务器上不同的 REDIS 实例需要配置不同的pidfile，建议使用前面提到的配置文件的命名规则。
+
+pidfile /var/run/redis.pid
+
+
+设置 REDIS 在指定的端口上监听连接。设置为0的话则表示 REDIS 不会监听TCP Sockets.比如在一些使用了Unix socket本地进程通信的场景下可以禁用TCP链接。
+注意：这个参数在2.8.3以及之前的版本上有一个bug: [https://github.com/antirez/redis/issues/1477][1]
+
+port 6379
+
+
+TCP listen() 方法backlog值。在一个高并发的环境下，需要指定一个比较大的backlog值来避免慢连接（由于网络原因导致握手速度慢）情况。
+注意：Linux 内核会默认使用/proc/sys/net/core/somaxconn 的值来削减 backlog的实际值，因此需要确保提升somaxconn 和 tcp_max_syn_backlog 这两个值来确保此处backlog设置生效。
+
+tcp-backlog 511
+
+
+默认情况下REDIS会在所有的可用网络接口中进行监听，如果你想让REDIS 在指定的网络接口中监听，那么可以使用bind指令来指定。当一个主机在网络中有多个IP的时候，比如有内网、外网之分的时候可能就需要用到该参数，bind 127.0.0.1就是指定只能本机网络访问。
+# bind 192.168.1.100 10.0.0.1
+bind 0.0.0.0
+
+
+
+
+
+
+
+
+
+
+[1]: https://github.com/antirez/redis/issues/1477
+
+
+
+
 
