--- a/_posts/2015-09-25-redis2.8-configuration-file-interpretation.md
+++ b/_posts/2015-09-25-redis2.8-configuration-file-interpretation.md
@@ -45,22 +45,80 @@ daemonize yes
 pidfile /var/run/redis.pid
 
 
-设置 REDIS 在指定的端口上监听连接。设置为0的话则表示 REDIS 不会监听TCP Sockets.比如在一些使用了Unix socket本地进程通信的场景下可以禁用TCP链接。
+\# 设置 REDIS 在指定的端口上监听连接。设置为0的话则表示 REDIS 不会监听TCP Sockets.比如在一些使用了Unix socket本地进程通信的场景下可以禁用TCP链接。
 注意：这个参数在2.8.3以及之前的版本上有一个bug: [https://github.com/antirez/redis/issues/1477][1]
 
 port 6379
 
 
-TCP listen() 方法backlog值。在一个高并发的环境下，需要指定一个比较大的backlog值来避免慢连接（由于网络原因导致握手速度慢）情况。
+\# TCP listen() 方法backlog值。在一个高并发的环境下，需要指定一个比较大的backlog值来避免慢连接（由于网络原因导致握手速度慢）情况。
 注意：Linux 内核会默认使用/proc/sys/net/core/somaxconn 的值来削减 backlog的实际值，因此需要确保提升somaxconn 和 tcp_max_syn_backlog 这两个值来确保此处backlog设置生效。
 
 tcp-backlog 511
 
 
-默认情况下REDIS会在所有的可用网络接口中进行监听，如果你想让REDIS 在指定的网络接口中监听，那么可以使用bind指令来指定。当一个主机在网络中有多个IP的时候，比如有内网、外网之分的时候可能就需要用到该参数，bind 127.0.0.1就是指定只能本机网络访问。
-# bind 192.168.1.100 10.0.0.1
+\# 默认情况下REDIS会在所有的可用网络接口中进行监听，如果你想让REDIS 在指定的网络接口中监听，那么可以使用bind指令来指定。当一个主机在网络中有多个IP的时候，比如有内网、外网之分的时候可能就需要用到该参数，bind 127.0.0.1就是指定只能本机网络访问。
+
+\# bind 192.168.1.100 10.0.0.1
+
 bind 0.0.0.0
 
+
+\# 指定Unix socket的路径来进行连接监听。默认不指定 REDIS 不会再Unix socket上监听。
+
+\# unixsocket /tmp/redis.sock
+
+\# unixsocketperm 755
+
+
+\# 用来指定关闭空闲N秒的连接，默认0表示不处理空闲连接。
+
+timeout 0
+
+
+\# 如果该值不为0，将使用 SO_KEEPALIVE 这一默认的做法来向客户端连接发送TCP ACKs.这样的好处有两个原因：
+
+\# 1）检测已死亡的对端；
+
+\# 2）保持连接在网络中的存活。
+
+tcp-keepalive 0
+
+
+\# 指定日志记录的级别，可以是下面几个值之一：
+
+\# debug（尽可能多的日志信息，用于开发和测试之中）
+
+\# verbose（少但是有用的信息，没有debug级别那么混乱）
+
+\# notice（适量的信息，用于生产环境）
+
+\# warning（只有非常重要和关键的信息会被记录）
+
+loglevel notice
+
+
+\# 指定日志文件的位置。为空时将输出到标准输出设备，如果 REDIS 是以守护进程方式运行的则会输出到/dev/null。
+
+logfile “”
+
+
+\# 当设置 'syslog-enabled'为 yes时， 允许记录日志到系统日志中。以及你可以使用更多的日志参数来满足你的要求。
+
+\# syslog-enabled no
+
+
+\# 指定在系统日志中的身份。
+
+\# syslog-ident redis
+
+\# 制定系统日志的能力，必须为LOCAL0到LOCAL7之间的一个值。
+
+\# syslog-facility local0
+
+\# 设置数据库的数量。默认使用的数据库为DB 0， 可以在每个连接的基础上使用SELECT <dbid> 来指定另外的数据库，但是这个值必须在0到 'databases'-1之间。
+
+databases 16
 
 
 
