--- a/_posts/2015-09-25-redis2.8-configuration-file-interpretation.md
+++ b/_posts/2015-09-25-redis2.8-configuration-file-interpretation.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Redis2.8配置文件详解"
 description: "Redis2.8配置文件详解"
-categories: [转载]
+categories: [Redis]
 tags: [Redis]
 alias: [/2015/09/25/]
 utilities: fancybox,unveil,highlight
